--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>List of web components</title>
 </head>
 <body>
-    <a href="./BottomSheet/">BottomSheet</a>
+    <ul>
+        List of web components
+        <li><a href="./BottomSheet/">BottomSheet</a></li>
+    </ul>
 </body>
 </html>
